style: fix slider content overflow

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
 .swiper-slide p {
   display: block;
   width: 100%;
+  padding-left: 20px;
 }
 
 /* .mySwiper .swiper-pagination {
